--- a/html/html/category.html
+++ b/html/html/category.html
@@ -13,45 +13,24 @@
     <nav>
         <a href="../index.html">Главная</a>
         <a href="category.html">Категории</a>
+        <a href="#"id="cart-link">Корзина</a>
     </nav>
-
     <div class="categorycontainer">
         <div class="category">
-            <button onclick="window.location.href='' ">Хоррор</button>
+        <button onclick="window.location.href=''">Боевики</button>
         </div>
         <div class="category">
-            <button onclick="window.location.href='' ">Инди</button>
+            <button onclick="window.location.href=''">Хоррор</button>
+          </div>
+         <div class="category">
+            <button onclick="window.location.href=''">экшен</button>
         </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href='' ">Шутеры</button>
-        </div>
+     <div class="category">
+        <button onclick="window.location.href=''">Головоломки</button>
+     </div>
+     <div class="category">
+        <button onclick="window.location.href=''">Шутеры</button>
+     </div>
     </div>
-</body>
-</html>
+<body>
+<html>
