--- a/html/category.html
+++ b/html/category.html
@@ -13,7 +13,7 @@
     <nav>
         <a href="../index.html">Главная</a>
         <a href="category.html">Категории</a>
-        <a href="#"id="cart-link">Корзина</a>
+        <a href="cart.html">Корзина</a>
     </nav>
     <div class="categorycontainer">
         <div class="category">
