--- a/html/category.html
+++ b/html/category.html
@@ -17,19 +17,16 @@
     </nav>
     <div class="categorycontainer">
         <div class="category">
-        <button onclick="window.location.href=''">Боевики</button>
-        </div>
-        <div class="category">
-            <button onclick="window.location.href=''">Хоррор</button>
+            <button onclick="window.location.href='horror.html'">Хоррор</button>
           </div>
          <div class="category">
-            <button onclick="window.location.href=''">экшен</button>
+            <button onclick="window.location.href='action.html'">экшен</button>
         </div>
      <div class="category">
-        <button onclick="window.location.href=''">Головоломки</button>
+        <button onclick="window.location.href='puzzle.html'">Головоломки</button>
      </div>
      <div class="category">
-        <button onclick="window.location.href=''">Шутеры</button>
+        <button onclick="window.location.href='shooter.html'">Шутеры</button>
      </div>
     </div>
 <body>
